Fixed popover overlapping issue and included jquery.mobile

--- a/app/assets/stylesheets/timeline.css.scss
+++ b/app/assets/stylesheets/timeline.css.scss
@@ -8,7 +8,6 @@
   position:relative;
   display: inline-block;
   @include box-sizing(border-box);
-  z-index:0;
     .image {
       height:220px;
         div {
